feat: 初始化可以带参考文献编译版本

--- a/ref.bib
+++ b/ref.bib
@@ -1,6 +1,44 @@
-@inproceedings{origin,
-  author    = {unknown},
-  title     = {THU Beamer Theme},
-  year      = {2015},
-  url       = {http://far.tooold.cn/post/latex/beamertsinghua},
+@article{Tang2022,
+   abstract = {In filtering-based global navigation satellite system (GNSS) / inertial navigation system (INS) integrated navigation systems, the precise INS mechanization has fully considered the impact of the Earth rotation, Coriolis acceleration, etc. However, most inertial measurement unit (IMU) preintegration models in factor graph optimization (FGO)-based integrated navigation systems are rough and ignore these factors. We propose an FGO-based GNSS/INS integrated navigation system to analyze and evaluate the impact of the Earth rotation on MEMS-IMU preintegration. The proposed FGO-based integration is based on a refined IMU preintegration, in which the Earth rotation is compensated. The proposed GNSS/INS integration is a sliding-window optimizer in which the GNSS positioning and the IMU preintegration are tightly fused within the FGO framework. The simulated GNSS outage in field tests, an effective method, is adopted to evaluate the IMU preintegration quantitatively. The results demonstrate that the refined IMU preintegration can achieve the same accuracy as the precise INS mechanization. In contrast, the rough IMU preintegration and INS mechanization without compensating for the Earth rotation yields notable accuracy degradation. When the GNSS-outage time is 60 seconds, the degradation can be 200% for the industrial-grade MEMS module and more than 10% for the consumer-grade MEMS chip. Besides, the degradation can be more significant if the GNSS-outage time is longer. The proposed FGO-based GNSS/INS integration (https://github.com/i2Nav-WHU/OB_GINS) and the employed datasets (https://github.com/i2Nav-WHU/awesome-gins-datasets) are open-sourced on GitHub.},
+   author = {Hailiang Tang and Tisheng Zhang and Xiaoji Niu and Jing Fan and Jingnan Liu},
+   doi = {10.1109/JSEN.2022.3192552},
+   issn = {15581748},
+   issue = {17},
+   journal = {IEEE Sensors Journal},
+   keywords = {GNSS/INS integration,MEMS-IMU preintegration,factor graph optimization},
+   month = {9},
+   pages = {17194-17204},
+   publisher = {Institute of Electrical and Electronics Engineers Inc.},
+   title = {Impact of the Earth Rotation Compensation on MEMS-IMU Preintegration of Factor Graph Optimization},
+   volume = {22},
+   year = {2022},
+}
+
+% https://blog.csdn.net/chenglinjuan/article/details/105667166 参考文献里面的&字符需要做转义处理
+@inproceedings{herath2020ronin,
+   abstract = {This paper sets a new foundation for data-driven inertial navigation research, where the task is the estimation of horizontal positions and heading direction of a moving subject from a sequence of IMU sensor measurements from a phone. In contrast to existing methods, our method can handle varying phone orientations and placements.More concretely, the paper presents 1) a new benchmark containing more than 40 hours of IMU sensor data from 100 human subjects with ground-truth 3D trajectories under natural human motions; 2) novel neural inertial navigation architectures, making significant improvements for challenging motion cases; and 3) qualitative and quantitative evaluations of the competing methods over three inertial navigation benchmarks. We share the code and data to promote further research. (http://ronin.cs.sfu.ca).},
+   author = {Sachini Herath and Hang Yan and Yasutaka Furukawa},
+   doi = {10.1109/ICRA40945.2020.9196860},
+   isbn = {9781728173955},
+   issn = {10504729},
+   journal = {IEEE International Conference on Robotics and Automation (ICRA)},
+   pages = {3146-3152},
+   title = {RoNIN: Robust Neural Inertial Navigation in the Wild: Benchmark, Evaluations, \& New Methods},
+   year = {2020},
+}
+
+@article{Geiger2013IJRR,
+   abstract = {We present a novel dataset captured from a VW station wagon for use in mobile robotics and autonomous driving research. In total, we recorded 6 hours of traffic scenarios at 10–100 Hz using a variety of sensor modalities such as high-resolution color and grayscale stereo cameras, a Velodyne 3D laser scanner and a high-precision GPS/IMU inertial navigation system. The scenarios are diverse, capturing real-world traffic situations, and range from freeways over rural areas to inner-city scenes with many static and dynamic objects. Our data is calibrated, synchronized and timestamped, and we provide the rectified and raw image sequences. Our dataset also contains object labels in the form of 3D tracklets, and we provide online benchmarks for stereo, optical flow, object detection and other tasks. This paper describes our recording platform, the data format and the utilities that we provide.},
+   author = {Andreas Geiger and Philip Lenz and Christoph Stiller and Raquel Urtasun},
+   doi = {10.1177/0278364913491297},
+   issn = {0278-3649},
+   issue = {11},
+   journal = {The International Journal of Robotics Research},
+   keywords = {Dataset,GPS,KITTI,SLAM,autonomous driving,benchmarks,cameras,computer vision,field robotics,laser,mobile robotics,object detection,optical flow,stereo,tracking},
+   month = {9},
+   pages = {1231-1237},
+   title = {Vision meets robotics: The KITTI dataset},
+   volume = {32},
+   url = {http://journals.sagepub.com/doi/10.1177/0278364913491297},
+   year = {2013},
 }
