--- a/Whu.sty
+++ b/Whu.sty
@@ -36,13 +36,12 @@
 %\useoutertheme{default}
 %\useinnertheme[shadow=true]{rounded}
 
-\xdefinecolor{tsinghua}{rgb}{0.455,0.204,0.506}  %RGB#82318E
-\setbeamercolor{footline}{bg=tsinghua}
-\setbeamercolor{frametitle}{bg=tsinghua,fg=white}
-\setbeamercolor{title}{bg=tsinghua}
+\xdefinecolor{ucas}{RGB}{0, 37, 84}
+\setbeamercolor{footline}{bg=ucas}
+\setbeamercolor{frametitle}{bg=ucas,fg=white}
+\setbeamercolor{title}{bg=ucas}
 \setbeamerfont{frametitle}{size=\large}
 %\setbeamertemplate{navigation symbols}{}
-\setbeamertemplate{bibliography item}[text]
 \setbeamertemplate{caption}[numbered]
 
 \setbeamercolor{palette primary}{use=structure,fg=white,bg=structure.fg}
@@ -53,8 +52,8 @@
 \setbeamercolor{titlelike}{parent=palette primary}
 
 %% try
-\setbeamercolor{block title}{bg=tsinghua,fg=white}
-\setbeamercolor*{block title example}{use={normal text,example text},bg=white,fg=tsinghua}
+\setbeamercolor{block title}{bg=ucas,fg=white}
+\setbeamercolor*{block title example}{use={normal text,example text},bg=white,fg=ucas}
 \setbeamercolor{fine separation line}{}
 \setbeamercolor{item projected}{fg=white}
 \setbeamercolor{palette sidebar primary}{use=normal text,fg=normal text.fg}
@@ -65,9 +64,9 @@
 \setbeamercolor{section in sidebar}{fg=brown}
 \setbeamercolor{section in sidebar shaded}{fg=grey}
 \setbeamercolor{separation line}{}
-\setbeamercolor{sidebar}{bg=tsinghua}
+\setbeamercolor{sidebar}{bg=ucas}
 \setbeamercolor{sidebar}{parent=palette primary}
-\setbeamercolor{structure}{fg=tsinghua}
+\setbeamercolor{structure}{fg=ucas}
 \setbeamercolor{subsection in sidebar}{fg=brown}
 \setbeamercolor{subsection in sidebar shaded}{fg=grey}
 \AtBeginSection[]{
