--- a/slide.tex
+++ b/slide.tex
@@ -135,9 +135,11 @@
             \toprule
             作者 & 文章题目 & 期刊/会议 & 发表日期 \\
             \midrule
+            Changhao Chen, et al & Learning Selective Sensor Fusion\cite{chen2021dynanet} & IEEE Trans Neural Netw Learn Syst & 2022 \\
+            Ze Chen, et al & Contrastive Learning\cite{chen2022contrastive} & IEEE Sens. J. & 2022 \\
             Changhao Chen, et al & DynaNet\cite{chen2021dynanet} & IEEE Trans Neural Netw Learn Syst & 2021 \\
-            Changhao Chen, et al & Inertial Odometry\cite{chen2021deep} & IEEE Trans Mob Comput & 2021 \\
-            Changhao Chen, et al & Pedestrian Inertial Navigation\cite{chen2020deep} & IEEE Internet Things J. & 2020 \\
+            Changhao Chen, et al & Deep Neural Network\cite{chen2021deep} & IEEE Trans Mob Comput & 2021 \\
+            Changhao Chen, et al & Deep Learning\cite{chen2020deep} & IEEE Internet Things J. & 2020 \\
             Changhao Chen, et al & MotionTransformer\cite{chen2018transferring} & AAAI & 2019 \\
             Changhao Chen, et al & IONet\cite{chen2018ionet} & AAAI & 2018 \\
             \bottomrule
