--- a/Whu.sty
+++ b/Whu.sty
@@ -1,4 +1,6 @@
 % .sty 宏包文件。宏包的名称与文件名一致。
+\NeedsTeXFormat{LaTeX2e}
+\ProvidesPackage{Whu}[2022/12/22 Wuhan University package]
 \mode<presentation>
 
 \newif\ifbeamer@secheader
@@ -37,10 +39,10 @@
 %\useoutertheme{default}
 %\useinnertheme[shadow=true]{rounded}
 
-\xdefinecolor{ucas}{RGB}{0, 37, 84}
-\setbeamercolor{footline}{bg=ucas}
-\setbeamercolor{frametitle}{bg=ucas,fg=white}
-\setbeamercolor{title}{bg=ucas}
+\xdefinecolor{whu}{RGB}{0, 37, 84} % 珞珈蓝
+\setbeamercolor{footline}{bg=whu}
+\setbeamercolor{frametitle}{bg=whu,fg=white}
+\setbeamercolor{title}{bg=whu}
 \setbeamerfont{frametitle}{size=\large}
 %\setbeamertemplate{navigation symbols}{}
 \setbeamertemplate{caption}[numbered]
@@ -53,8 +55,8 @@
 \setbeamercolor{titlelike}{parent=palette primary}
 
 %% try
-\setbeamercolor{block title}{bg=ucas,fg=white}
-\setbeamercolor*{block title example}{use={normal text,example text},bg=white,fg=ucas}
+\setbeamercolor{block title}{bg=whu,fg=white}
+\setbeamercolor*{block title example}{use={normal text,example text},bg=white,fg=whu}
 \setbeamercolor{fine separation line}{}
 \setbeamercolor{item projected}{fg=white}
 \setbeamercolor{palette sidebar primary}{use=normal text,fg=normal text.fg}
@@ -65,9 +67,9 @@
 \setbeamercolor{section in sidebar}{fg=brown}
 \setbeamercolor{section in sidebar shaded}{fg=grey}
 \setbeamercolor{separation line}{}
-\setbeamercolor{sidebar}{bg=ucas}
+\setbeamercolor{sidebar}{bg=whu}
 \setbeamercolor{sidebar}{parent=palette primary}
-\setbeamercolor{structure}{fg=ucas}
+\setbeamercolor{structure}{fg=whu}
 \setbeamercolor{subsection in sidebar}{fg=brown}
 \setbeamercolor{subsection in sidebar shaded}{fg=grey}
 \AtBeginSection[]{
