--- a/Whu.sty
+++ b/Whu.sty
@@ -1,87 +1,125 @@
 % .sty 宏包文件。宏包的名称与文件名一致。
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{Whu}[2022/12/22 Wuhan University package]
-\mode<presentation>
 
-\newif\ifbeamer@secheader
-\beamer@secheaderfalse
-
-%\DeclareOptionBeamer{secheader}{\beamer@secheadertrue}
 \ProcessOptionsBeamer
 
+\mode<presentation>
+
+% https://tug.ctan.org/macros/latex/contrib/beamer/doc/beameruserguide.pdf
+% footline=authorinstitutetitle shows the author’s name, the institute, and the title in the footline
+% subsection=⟨true or false⟩ shows or suppresses line showing the subsection in the headline. It is shown by default. 
+% If the document does not use subsections, this option should be set false.
 \useoutertheme[footline=authorinstitutetitle,subsection=false]{smoothbars}
-\makeatletter % [add curpage/total page at the bottom](http://tex.stackexchange.com/questions/100838/beamer-dresden-theme-miniframes-appeareance-and-frame-number-insertion)
-\newcommand{\frameofframes}{/}
-\newcommand{\setframeofframes}[1]{\renewcommand{\frameofframes}{#1}}
-\setbeamertemplate{footline} 
-  {%
-    \begin{beamercolorbox}[colsep=1.5pt]{upper separation line foot}
-    \end{beamercolorbox}
-    \begin{beamercolorbox}[ht=2.5ex,dp=1.125ex,%
-      leftskip=.3cm,rightskip=.3cm plus1fil]{author in head/foot}%
-      \leavevmode{\usebeamerfont{author in head/foot}\insertshortauthor}%
-      \hfill%
-      {\usebeamerfont{institute in head/foot}\usebeamercolor[fg]{institute in head/foot}\insertshortinstitute}%
-    \end{beamercolorbox}%
-    \begin{beamercolorbox}[ht=2.5ex,dp=1.125ex,%
-      leftskip=.3cm,rightskip=.3cm plus1fil]{title in head/foot}%
-      {\usebeamerfont{title in head/foot}\insertshorttitle}%
-      \hfill%
-      {\usebeamerfont{frame number}\usebeamercolor[fg]{frame number}\insertframenumber~\frameofframes~\inserttotalframenumber}
-    \end{beamercolorbox}%
-    \begin{beamercolorbox}[colsep=1.5pt]{lower separation line foot}
-    \end{beamercolorbox}
-  }
-\makeatother
 
 \useinnertheme{circles}
 
-%\useoutertheme{default}
-%\useinnertheme[shadow=true]{rounded}
+%%%% BEAMER appearance cheat sheet (from version 3.57)
+%%%% https://www.cpt.univ-mrs.fr/~masson/latex/Beamer-appearance-cheat-sheet.pdf
 
-\xdefinecolor{whu}{RGB}{0, 37, 84} % 珞珈蓝
-\setbeamercolor{footline}{bg=whu}
-\setbeamercolor{frametitle}{bg=whu,fg=white}
-\setbeamercolor{title}{bg=whu}
-\setbeamerfont{frametitle}{size=\large}
-%\setbeamertemplate{navigation symbols}{}
+\newcommand{\frameofframes}{/}
+
+%%% Beamer’s Templates
+%% Structure of a frame
+% Headlines and footlines
+\setbeamertemplate{footline} {%
+  % 12.5 Framed and Boxed Text
+  % \begin{beamercolorbox}[⟨options⟩]{⟨beamer color⟩}
+  %   ⟨environment contents⟩
+  % \end{beamercolorbox}
+  %
+  % colsep=⟨dimension⟩ sets the extra “color separation space” around the text. 
+  %
+  % Beamer-Color upper separation line foot
+  % Color parents: separation line
+  % Special case for the uppermost separation line in a footline.
+  \begin{beamercolorbox}[colsep=1.5pt]{upper separation line foot}
+  \end{beamercolorbox}
+
+  % dp={⟨depth⟩} sets the depth of the box, overriding the real depth of the box.
+  % ht=⟨height⟩ sets the height of the box, overriding the real height.
+  % leftskip=⟨left skip⟩ installs the ⟨left skip⟩ inside the box as the left skip.
+  % 
+  \begin{beamercolorbox}[ht=2.5ex,dp=1.125ex,leftskip=.3cm,rightskip=.3cm plus1fil]{author in head/foot}%
+    \leavevmode{\usebeamerfont{author in head/foot}\insertshortauthor}%
+    \hfill%
+    {\usebeamerfont{institute in head/foot}\usebeamercolor[fg]{institute in head/foot}\insertshortinstitute}%
+  \end{beamercolorbox}%
+
+  \begin{beamercolorbox}[ht=2.5ex,dp=1.125ex,leftskip=.3cm,rightskip=.3cm plus1fil]{title in head/foot}%
+    {\usebeamerfont{title in head/foot}\insertshorttitle}%
+    \hfill%
+    {\usebeamerfont{frame number}\usebeamercolor[fg]{frame number}\insertframenumber~\frameofframes~\inserttotalframenumber}
+  \end{beamercolorbox}%
+
+  % Beamer-Color lower separation line foot
+  % Color parents: separation line
+  % Special case for the lower separation line in a footline.
+  \begin{beamercolorbox}[colsep=1.5pt]{lower separation line foot}
+  \end{beamercolorbox}
+}
+
+%% Elements of a frame
+% Figures and tables
 \setbeamertemplate{caption}[numbered]
 
+
+%%% Beamer’s Fonts
+%% Elements of a frame
+% Frame title
+\setbeamerfont{frametitle}{size=\large}
+
+%%% Beamer’s Colors 
+\xdefinecolor{whu}{RGB}{0, 37, 84} % 珞珈蓝
+
+
+
+%% Structure of the presentation
+% Color palettes
 \setbeamercolor{palette primary}{use=structure,fg=white,bg=structure.fg}
 \setbeamercolor{palette secondary}{use=structure,fg=white,bg=structure.fg!75!black}
 \setbeamercolor{palette tertiary}{use=structure,fg=white,bg=structure.fg!50!black}
 \setbeamercolor{palette quaternary}{fg=white,bg=structure.fg!50!black}
-%\setbeamercolor*{sidebar}{use=structure,bg=structure.fg}
-\setbeamercolor{titlelike}{parent=palette primary}
 
-%% try
+% Global definitions
+\setbeamercolor{separation line}{}
+\setbeamercolor{fine separation line}{}
+
+% Title page, part, section, subsection
+\setbeamercolor{titlelike}{parent=palette primary}
+\setbeamercolor{title}{bg=whu}
+
+%% Structure of a frame
+% Headlines and footlines
+\setbeamercolor{footline}{bg=whu}
+
+%% Elements of a frame
+% Frame title
+\setbeamercolor{frametitle}{bg=whu,fg=white}
+
+% Lists
+\setbeamercolor{item projected}{fg=white}
+
+% Highlighting
+\setbeamercolor{structure}{fg=whu}
+
+% Blocks environments
 \setbeamercolor{block title}{bg=whu,fg=white}
 \setbeamercolor*{block title example}{use={normal text,example text},bg=white,fg=whu}
-\setbeamercolor{fine separation line}{}
-\setbeamercolor{item projected}{fg=white}
-\setbeamercolor{palette sidebar primary}{use=normal text,fg=normal text.fg}
-\setbeamercolor{palette sidebar quaternary}{use=structure,fg=structure.fg}
-\setbeamercolor{palette sidebar secondary}{use=structure,fg=structure.fg}
-\setbeamercolor{palette sidebar tertiary}{use=normal text,fg=normal text.fg}
-%\setbeamercolor{palette sidebar quaternary}{fg=white}
-\setbeamercolor{section in sidebar}{fg=brown}
-\setbeamercolor{section in sidebar shaded}{fg=grey}
-\setbeamercolor{separation line}{}
-\setbeamercolor{sidebar}{bg=whu}
-\setbeamercolor{sidebar}{parent=palette primary}
-\setbeamercolor{structure}{fg=whu}
-\setbeamercolor{subsection in sidebar}{fg=brown}
-\setbeamercolor{subsection in sidebar shaded}{fg=grey}
+
+
 \AtBeginSection[]{
-	\begin{frame}
+  \begin{frame}
 		\tableofcontents[sectionstyle=show/shaded,subsectionstyle=show/shaded/hide,subsubsectionstyle=show/shaded/hide]
 	\end{frame}
 }
+
 \AtBeginSubsection[]{
 	\begin{frame}
 		\tableofcontents[sectionstyle=show/shaded,subsectionstyle=show/shaded/hide,subsubsectionstyle=show/shaded/hide]
 	\end{frame}
 }
+
 
 \mode
 <all>
